# revolutionary-arabic-news-system

./: .env.example  .gitignore  API_SETUP_GUIDE.md  CHANGELOG.md  COMPARISON_REPORT.md  DEPLOYMENT.md  DEPLOYMENT_GUIDE.md  FEATURES.md  LICENSE  README.md  REVOLUTIONARY_ACHIEVEMENTS.md  docker-compose.dev.yml  docker-compose.yml  quick-test.sh  run-quick-test.sh  test-system.sh
.github/workflows/: ci.yml  deploy.yml  node.js.yml  python-app.yml
backend/: Dockerfile  advanced_server.py  ai_engine.py  app.py  automation_system.py  env_example.txt  main.py  phase_four_system.py  phase_three_system.py  pyproject.toml  real_automation_system.py  real_server.py  requirements.txt  revolutionary_final.py  revolutionary_integrated_system.py  revolutionary_system.py  simple_test.py  start.py
backend/src/models/: advertising.py  financial.py  news.py  presenters.py  social.py  whatsapp.py
backend/src/routes/: analytics.py  automation.py  contact.py  financial.py  health.py  news.py  presenter.py
backend/src/services/: ai_processor.py  automation_service.py  news_scraper.py  performance_monitor.py  social_media_service.py  websocket_service.py
backend/tests/: conftest.py  test_api.py  test_automation.py
docker/nginx/: nginx.conf
docker/postgres/: init.sql
frontend/: .eslintrc.js  .eslintrc.json  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js  vitest.config.js
frontend/src/: App.jsx  index.css
frontend/src/contexts/: WebSocketContext.jsx
frontend/src/pages/: AdvertisingManager.jsx  AnalyticsPage.jsx  (+19 more)
scripts/: deploy.sh  start-dev.sh  test-automation.sh
(+7 files in other folders)
